# annotation

./: .clang-format  .gitignore  Annotation.cpp  Annotation.h  Annotation.qrc  Annotation.ui  AnnotationDefine.h  Arrow.cpp  Arrow.h  ArrowManager.cpp  ArrowManager.h  CMakeLists.txt  Frame.cpp  Frame.h  README.md  main.cpp
Manager/: ArrowManager.cpp  ArrowManager.h  TextManager.cpp  TextManager.h
Unit/: Arrow.cpp  Arrow.h  Text.cpp  Text.h
